--- a/Dashboard1/index.html
+++ b/Dashboard1/index.html
@@ -66,6 +66,10 @@
     <div id="report-content" class="max-w-7xl mx-auto bg-white rounded-2xl shadow-2xl p-4 md:p-10">
         
         <header class="text-center pdf-page cover-page">
+            <div class="w-full flex justify-between items-center px-4 md:px-8 lg:px-16 mb-8">
+                <img src="https://uploadkon.ir/uploads/15da18_25لوگو.png" alt="لوگوی شرکت عمران و مسکن شمال" class="h-24 md:h-32 object-contain">
+                <img src="https://uploadkon.ir/uploads/15da18_25لوگو2.png" alt="لوگوی مهندسین مشاور ایده پرداز محیط" class="h-20 md:h-28 object-contain">
+            </div>
             <div class="border-y-4 border-indigo-700 py-10 px-6 md:py-12 md:px-8 w-full">
                 <h1 class="text-3xl sm:text-4xl md:text-5xl font-bold text-indigo-900">شناسنامه پروژه‌های بالقوه</h1>
                 <p class="text-lg md:text-xl text-slate-600 mt-4">گزارش مدیریتی و تحلیلی شهرک نمک‌آبرود</p>
